Fixing paths on index

--- a/cursos.html
+++ b/cursos.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Lingua Academy</title>
-    <link rel="icon" type="logo.png" href="/static/img/logo.png">
+    <link rel="icon" type="logo.png" href="static/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/css/estilos.css">
-    <link rel="stylesheet" href="/static/css/cursos.css">
-    <link rel="stylesheet" href="/static/icons/icons.css"> 
+    <link rel="stylesheet" href="static/css/estilos.css">
+    <link rel="stylesheet" href="static/css/cursos.css">
+    <link rel="stylesheet" href="static/icons/icons.css"> 
 </head>
 
 <body>
@@ -20,45 +20,45 @@
           <h1>E-LINGUA ACADEMY</h1>
       </div>
       <div class="banner">
-          <a class="btn" href="/login.html">Log in</a>
-          <a class="btn" href="/registro.html">Sign up</a>
+          <a class="btn" href="login.html">Log in</a>
+          <a class="btn" href="registro.html">Sign up</a>
       </div>
   </header>
   <nav class="menu">
     <ul class="botonera">
-      <li><a href="/index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li>
         <div class="dropdown">
-          <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+          <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
           <div class="dropdown-content">
-            <a href="/profesores.html">Equipo</a>
-            <a href="/nosotros.html">Historia</a>
+            <a href="profesores.html">Equipo</a>
+            <a href="nosotros.html">Historia</a>
           </div>
         </div>
       </li>
-      <li><a href="/contacto.html">Contacto</a></li>
-      <li><a href="/metodos.html">Métodos de Pagos</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+      <li><a href="metodos.html">Métodos de Pagos</a></li>
     </ul>
   </nav>
   <main class="contenedor">
     <div class="grid-container">
-      <a href="/static/idiomas/ingles.html" class="grid-item">
+      <a href="static/idiomas/ingles.html" class="grid-item">
         <img src="/static/img/English.png" alt="Image 1">
         <div class="title">Inglés</div>
       </a>
-      <a href="/static/idiomas/frances.html" class="grid-item">
+      <a href="static/idiomas/frances.html" class="grid-item">
         <img src="/static/img/French.png" alt="Image 2">
         <div class="title">Francés</div>
       </a>
-      <a href="/static/idiomas/aleman.html" class="grid-item">
+      <a href="static/idiomas/aleman.html" class="grid-item">
         <img src="/static/img/alemania.png" alt="Image 3">
         <div class="title">Alemán</div>
       </a>
-      <a href="/static/idiomas/español.html" class="grid-item">
+      <a href="static/idiomas/español.html" class="grid-item">
         <img src="/static/img/Spanish.png" alt="Image 4">
         <div class="title">Español</div>
       </a>
-      <a href="/static/idiomas/portugues.html" class="grid-item">
+      <a href="static/idiomas/portugues.html" class="grid-item">
         <img src="/static/img/Portugues.png" alt="Image 5">
         <div class="title">Portugués</div>
       </a>
