--- a/nosotros.html
+++ b/nosotros.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Nosotros</title>
-    <link rel="icon" type="logo.png" href="/static/img/logo.png">
-    <link rel="stylesheet" href="/static/css/estilos.css">
-    <link rel="stylesheet" href="/static/css/nosotros.css">
-    <link rel="stylesheet" href="/static/icons/icons.css">
+    <link rel="icon" type="logo.png" href="static/img/logo.png">
+    <link rel="stylesheet" href="static/css/estilos.css">
+    <link rel="stylesheet" href="static/css/nosotros.css">
+    <link rel="stylesheet" href="static/icons/icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,37 +18,37 @@
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
-            <a class="btn" href="/login.html">Log in</a>
-            <a class="btn" href="/registro.html">Sign up</a>
+            <a class="btn" href="login.html">Log in</a>
+            <a class="btn" href="registro.html">Sign up</a>
         </div>
     </header>
     <nav class="menu">
         <ul class="botonera">
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
                 <div class="dropdown">
-                    <a href="/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
                     <div class="dropdown-content">
-                        <a href="/profesores.html">Equipo</a>
-                        <a href="/nosotros.html">Historia</a>
+                        <a href="profesores.html">Equipo</a>
+                        <a href="nosotros.html">Historia</a>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="/cursos.html" class="dropbtn">Cursos</a>
+                    <a href="cursos.html" class="dropbtn">Cursos</a>
                  <div class="dropdown-content">
-                        <a href="/static/idiomas/aleman.html">Alemán</a>
-                        <a href="/static/idiomas/frances.html">Francés</a>
-                        <a href="/static/idiomas/ingles.html">Inglés</a>
-                        <a href="/static/idiomas/español.html">Español</a>
-                        <a href="/static/idiomas/portugues.html">Portugués</a>
-                        <a href="/cursos.html">Todos los Cursos</a>
+                        <a href="static/idiomas/aleman.html">Alemán</a>
+                        <a href="static/idiomas/frances.html">Francés</a>
+                        <a href="static/idiomas/ingles.html">Inglés</a>
+                        <a href="static/idiomas/español.html">Español</a>
+                        <a href="static/idiomas/portugues.html">Portugués</a>
+                        <a href="cursos.html">Todos los Cursos</a>
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
-            <li><a href="/contacto.html">Contacto</a></li>
-            <li><a href="/metodos.html">Métodos de Pagos</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+            <li><a href="metodos.html">Métodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="container-nos">
