--- a/registro.html
+++ b/registro.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="icon" type="logo.png" href="/static/img/logo.png">
-    <link rel="stylesheet" href="/static/css/estilos.css">
-    <link rel="stylesheet" href="/static/css/registro.css">
+    <link rel="icon" type="logo.png" href="static/img/logo.png">
+    <link rel="stylesheet" href="static/css/estilos.css">
+    <link rel="stylesheet" href="static/css/registro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/static/icons/icons.css"> 
+    <link rel="stylesheet" href="static/icons/icons.css"> 
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <main>
         <form class="form">
             <h2 class="form_titulo">Registrate</h2>
-            <p class="form_p">¿Ya tienes una cuenta? <a href="/login.html" class="form_link">Inicia sesión aquí</a></p>
+            <p class="form_p">¿Ya tienes una cuenta? <a href="login.html" class="form_link">Inicia sesión aquí</a></p>
 
             <div class="form_container">
                 <div class="form_agrupado">
