Fixing paths to sources

--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
 
     <header class="header">
         <div class="banner"> 
-            <img id="logo" src="/static/img/logo.png" alt="logo">
+            <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
@@ -97,14 +97,14 @@
                     </form>
 
                     <!-- Archivo JavaScript externo -->
-                    <script src="/static/js/contacto.js"></script>
+                    <script src="static/js/contacto.js"></script>
                 </div>
                 <div class="contacto-info">
                     <h4>Más información</h4>
                     <ul>
-                        <li><img src="/static/img/maps-and-flags.png" alt="ubicación" width="20vw">Av. Corrientes 2037, C1001 Cdad. Autónoma de Buenos Aires.</li>
-                        <li><img src="/static/img/telephone.png" alt="celular" width="20vw"> +54 1122223333</li>
-                        <li><img src="/static/img/email.png" alt="email" width="20vw">contacto@sitioweb.com</li>
+                        <li><img src="static/img/maps-and-flags.png" alt="ubicación" width="20vw">Av. Corrientes 2037, C1001 Cdad. Autónoma de Buenos Aires.</li>
+                        <li><img src="static/img/telephone.png" alt="celular" width="20vw"> +54 1122223333</li>
+                        <li><img src="static/img/email.png" alt="email" width="20vw">contacto@sitioweb.com</li>
                     </ul>
                     <p>
                         Para obtener más información sobre nuestros cursos y servicios, no dudes en ponerte en contacto con nosotros.
