--- a/cursos.html
+++ b/cursos.html
@@ -43,23 +43,23 @@
   <main class="contenedor">
     <div class="grid-container">
       <a href="static/idiomas/ingles.html" class="grid-item">
-        <img src="/static/img/English.png" alt="Image 1">
+        <img src="static/img/English.png" alt="Image 1">
         <div class="title">Inglés</div>
       </a>
       <a href="static/idiomas/frances.html" class="grid-item">
-        <img src="/static/img/French.png" alt="Image 2">
+        <img src="static/img/French.png" alt="Image 2">
         <div class="title">Francés</div>
       </a>
       <a href="static/idiomas/aleman.html" class="grid-item">
-        <img src="/static/img/alemania.png" alt="Image 3">
+        <img src="static/img/alemania.png" alt="Image 3">
         <div class="title">Alemán</div>
       </a>
       <a href="static/idiomas/español.html" class="grid-item">
-        <img src="/static/img/Spanish.png" alt="Image 4">
+        <img src="static/img/Spanish.png" alt="Image 4">
         <div class="title">Español</div>
       </a>
       <a href="static/idiomas/portugues.html" class="grid-item">
-        <img src="/static/img/Portugues.png" alt="Image 5">
+        <img src="static/img/Portugues.png" alt="Image 5">
         <div class="title">Portugués</div>
       </a>
     </div>
