--- a/metodos.html
+++ b/metodos.html
@@ -21,7 +21,7 @@
     
     <header class="header">
         <div class="banner"> 
-            <img id="logo" src="/static/img/logo.png" alt="logo">
+            <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
@@ -101,7 +101,7 @@
                         <h3 class="titulo">Pago</h3>
                     <div class="input-box">
                         <span>Tarjetas aceptadas:</span>
-                        <img src="/static/img/imgcards.png" alt="tarjetas">
+                        <img src="static/img/imgcards.png" alt="tarjetas">
                     </div>
                     <div class="input-box">
                         <span>Titular de la Tarjeta:</span>
@@ -134,8 +134,8 @@
             </form>
 
              <!-- Archivo JavaScript externo -->
-            <script src="/static/js/validar_pago.js"></script>
-            <script src="/static/js/limitarCampos.js"></script>
+            <script src="static/js/validar_pago.js"></script>
+            <script src="static/js/limitarCampos.js"></script>
         </div>
 
         <footer>
