--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="static/icons/icons.css"> 
-    <script src="/static/js/flyer.js"></script>
+    <script src="static/js/flyer.js"></script>
     
 </head>
 <body>
     <header>
         <div class="banner"> 
-            <img id="logo" src="/static/img/logo.png" alt="logo">
+            <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
@@ -63,13 +63,13 @@
 
         <p id="poesia">"Aprender otro idioma no es solamente aprender palabras diferentes para las mismas cosas, sino aprender otra manera de pensar acerca de las cosas". Flora Lewis</p>
         <section class="flyer">
-            <img src="/static/img/1.png" alt="Habla" class="active">
-            <img src="/static/img/2.png" alt="Español">
-            <img src="/static/img/3.png" alt="Inglés">
-            <img src="/static/img/4.png" alt="Portugues">
-            <img src="/static/img/5.png" alt="Frances">
-            <img src="/static/img/6.png" alt="Aleman">
-            <img src="/static/img/7.png" alt="Idiomas">
+            <img src="static/img/1.png" alt="Habla" class="active">
+            <img src="static/img/2.png" alt="Español">
+            <img src="static/img/3.png" alt="Inglés">
+            <img src="static/img/4.png" alt="Portugues">
+            <img src="static/img/5.png" alt="Frances">
+            <img src="static/img/6.png" alt="Aleman">
+            <img src="static/img/7.png" alt="Idiomas">
         </section>
     </main>
     <footer>
