--- a/registro.html
+++ b/registro.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="banner"> 
-            <img id="logo" src="/static/img/logo.png" alt="logo">
+            <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
     </header>
