--- a/static/idiomas/aleman.html
+++ b/static/idiomas/aleman.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="banner"> 
-            <img id="logo" src="/static/img/logo.png" alt="logo">
+            <img id="logo" src="static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
        <div class="banner">
