--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Lingua Academy</title>
-    <link rel="icon" type="logo.png" href="static/img/logo.png">
-    <link rel="stylesheet" href="static/css/estilos.css">
+  <link rel="icon" type="image/png" href="static/img/logo.png">    <link rel="stylesheet" href="static/css/estilos.css">
     <link rel="stylesheet" href="static/css/flyer.css">
     <link rel="stylesheet" href="static/css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
