--- a/nosotros.html
+++ b/nosotros.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Nosotros</title>
-    <link rel="icon" type="logo.png" href="static/img/logo.png">
-    <link rel="stylesheet" href="static/css/estilos.css">
+  <link rel="icon" type="image/png" href="static/img/logo.png">    <link rel="stylesheet" href="static/css/estilos.css">
     <link rel="stylesheet" href="static/css/nosotros.css">
     <link rel="stylesheet" href="static/icons/icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
