--- a/static/idiomas/español.html
+++ b/static/idiomas/español.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Lingua Academy</title>
-    <link rel="icon" type="logo.png" href="static/img/logo.png">
-    <link rel="stylesheet" href="static/css/estilos.css">
+  <link rel="icon" type="image/png" href="static/img/logo.png">    <link rel="stylesheet" href="static/css/estilos.css">
     <link rel="stylesheet" href="static/css/home.css">
     <link rel="stylesheet" href="static/css/idiomas.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
