Fixing root-relative paths for Github-Pages

--- a/static/idiomas/aleman.html
+++ b/static/idiomas/aleman.html
@@ -4,56 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Lingua Academy</title>
-    <link rel="icon" type="image/png" href="static/img/logo.png">    
-    <link rel="stylesheet" href="static/css/estilos.css">
-    <link rel="stylesheet" href="static/css/home.css">
-    <link rel="stylesheet" href="static/css/idiomas.css">
+    <link rel="icon" type="image/png" href="/E-Lingua-Academy/static/img/logo.png">    
+    <link rel="stylesheet" href="/E-Lingua-Academy/static/css/estilos.css">
+    <link rel="stylesheet" href="/E-Lingua-Academy/static/css/home.css">
+    <link rel="stylesheet" href="/E-Lingua-Academy/static/css/idiomas.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/icons/icons.css"> 
+    <link rel="stylesheet" href="/E-Lingua-Academy/static/icons/icons.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="banner"> 
-            <img id="logo" src="static/img/logo.png" alt="logo">
+            <img id="logo" src="/E-Lingua-Academy/static/img/logo.png" alt="logo">
             <h1>E-LINGUA ACADEMY</h1>
         </div>
        <div class="banner">
-            <a class="btn" href="login.html">Log in</a>
-            <a class="btn" href="registro.html">Sign up</a>
+            <a class="btn" href="/E-Lingua-Academy/login.html">Log in</a>
+            <a class="btn" href="/E-Lingua-Academy/registro.html">Sign up</a>
        </div>
     </header>
     <nav class="menu">
         <ul class="botonera">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="/E-Lingua-Academy/index.html">Home</a></li>
             <li>
                 <div class="dropdown">
-                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <a href="/E-Lingua-Academy/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
                     <div class="dropdown-content">
-                        <a href="profesores.html">Equipo</a>
-                        <a href="nosotros.html">Historia</a>
+                        <a href="/E-Lingua-Academy/profesores.html">Equipo</a>
+                        <a href="/E-Lingua-Academy/nosotros.html">Historia</a>
                     </div>
                 </div>
             </li>
             <li>
                 <div class="dropdown">
-                    <a href="cursos.html" class="dropbtn">Cursos</a>
+                    <a href="/E-Lingua-Academy/cursos.html" class="dropbtn">Cursos</a>
                     <div class="dropdown-content">
-                        <a href="static/idiomas/aleman.html">Alemán</a>
-                        <a href="static/idiomas/frances.html">Francés</a>
-                        <a href="static/idiomas/ingles.html">Inglés</a>
-                        <a href="static/idiomas/español.html">Español</a>
-                        <a href="static/idiomas/portugues.html">Portugués</a>
+                        <a href="/E-Lingua-Academy/static/idiomas/aleman.html">Alemán</a>
+                        <a href="/E-Lingua-Academy/static/idiomas/frances.html">Francés</a>
+                        <a href="/E-Lingua-Academy/static/idiomas/ingles.html">Inglés</a>
+                        <a href="/E-Lingua-Academy/static/idiomas/español.html">Español</a>
+                        <a href="/E-Lingua-Academy/static/idiomas/portugues.html">Portugués</a>
                         <a href="cursos.html">Todos los Cursos</a>
                     </div>
                 </div>
             </li> <!-- Cambie el enlace por un botón -->
-            <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="metodos.html">Métodos de Pagos</a></li>
+            <li><a href="/E-Lingua-Academy/contacto.html">Contacto</a></li>
+            <li><a href="/E-Lingua-Academy/metodos.html">Métodos de Pagos</a></li>
         </ul>
     </nav>
     <main class="idiomas">
@@ -112,7 +112,7 @@
         <div class="aleman">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/sUVfWCt-rLY?si=cEuttldJxwNBjGER" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-            <a href="metodos.html">¡Comienza Ya!</a>
+            <a href="/E-Lingua-Academy/metodos.html">¡Comienza Ya!</a>
         </div>
         
 
