Adding link to home on logo and home button on Log in/Sign up

--- a/contacto.html
+++ b/contacto.html
@@ -23,7 +23,7 @@
 
     <header class="header">
         <div class="banner"> 
-            <img id="logo" src="static/img/logo.png" alt="logo">
+            <a href="/E-Lingua-Academy/index.html"><img id="logo" src="static/img/logo.png" alt="logo"></a>
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
