--- a/registro.html
+++ b/registro.html
@@ -57,6 +57,9 @@
                 </div>
 
                 <input type="submit" class="form_submit" value="Registrarse">
+
+                <a href="index.html" class="form_home_button">Volver al Homepage</a>
+                
             </div>
         </form>
     </main>
