--- a/static/idiomas/español.html
+++ b/static/idiomas/español.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="banner"> 
-            <img id="logo" src="/E-Lingua-Academy/static/img/logo.png" alt="logo">
+            <a href="/E-Lingua-Academy/index.html"><img id="logo" src="static/img/logo.png" alt="logo"></a>
             <h1>E-LINGUA ACADEMY</h1>
         </div>
        <div class="banner">
