Adding select option for Contact and correcting links to home page on logo

--- a/contacto.html
+++ b/contacto.html
@@ -75,6 +75,15 @@
                             <input type="text" name="Nombre Completo" placeholder="Juan Perez" minlength="3" maxlength="30" pattern="[A-Za-zÁáÉéÍíÓóÚúÜü ]+">
                         </p>
                         <p>
+                            <label for="gender">Género</label>
+                            <select name="gender" id="gender">
+                                <option value="male">Masculino</option>
+                                <option value="female">Femenino</option>
+                                <option value="other">Otro</option>
+                                <option value="prefer_not_to_say">Prefiero no decirlo</option>
+                            </select>
+                        </p>
+                        <p>
                             <label for="email">Dirección de Correo Electrónico</label>
                             <input type="email" name="Correo Electrónico" placeholder="juanperez@gmail.com" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
                         </p>
