--- a/contacto.html
+++ b/contacto.html
@@ -91,7 +91,7 @@
                             <label for="celu">Teléfono</label>
                             <input type="tel" name="Teléfono" placeholder="Ingrese su número de teléfono" minlength="10" maxlength="15" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
                         </p>
-                        <p>
+                        <p class="block">
                             <label for="asunto">Asunto</label>
                             <input type="text" name="Asunto" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$">
                         </p>
