--- a/contacto.html
+++ b/contacto.html
@@ -77,6 +77,7 @@
                         <p>
                             <label for="gender">Género</label>
                             <select name="gender" id="gender">
+                                <option value="" selected>Seleccione una opción</option>
                                 <option value="male">Masculino</option>
                                 <option value="female">Femenino</option>
                                 <option value="other">Otro</option>
