Correcciones de direccionamiento

--- a/E-Lingua-Academy/static/idiomas/aleman.html
+++ b/E-Lingua-Academy/static/idiomas/aleman.html
@@ -32,7 +32,7 @@
     
             <li>
                 <div class="dropdown">
-                    <a href="/E-Lingua-Academy/nosotros.html" class="dropbtn">Acerca de Nosotros</a>
+                    <a href="nosotros.html" class="dropbtn">Acerca de Nosotros</a>
                     <div class="dropdown-content">
                         <a href="/E-Lingua-Academy/profesores.html">Equipo</a>
                         <a href="/E-Lingua-Academy/nosotros.html">Historia</a>
