--- a/E-Lingua-Academy/cursos.html
+++ b/E-Lingua-Academy/cursos.html
@@ -15,7 +15,7 @@
 <body>
   <header>
       <div class="banner"> 
-          <a href="/E-Lingua-Academy/index.html"><img id="logo" src="static/img/logo.png" alt="logo"></a>
+          <a href="index.html"><img id="logo" src="static/img/logo.png" alt="logo"></a>
           <h1>E-LINGUA ACADEMY</h1>
       </div>
       <div class="banner">
