--- a/E-Lingua-Academy/index.html
+++ b/E-Lingua-Academy/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="banner"> 
-            <a href="/E-Lingua-Academy/index.html"><a href="/E-Lingua-Academy/index.html"><img id="logo" src="static/img/logo.png" alt="logo"></a></a>
+            <a href="index.html"><img id="logo" src="static/img/logo.png" alt="logo"></a></a>
             <h1>E-LINGUA ACADEMY</h1>
         </div>
         <div class="banner">
